@@ -1,3 +1,4 @@
+- Change docker restart policy. (restart: always)
 - Add nginx.
 - Add default kibana template.
 - Add standalone elasticsearch.
